unpackaged/main/default/objects/Tax_POA_Form__c/Tax_POA_Form__c.object-meta.xml
<CustomObject>
    <description>This object is created to store Tax Ops POA information used for sending POA forms to customers for signature. This object connects to conga and docusign</description>
    <label>Tax POA Form</label>
    <nameField>
        <displayFormat>POA-{000000000}</displayFormat>
        <label>Tax POA Form Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tax POA Forms</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>