unpackaged/main/default/objects/Tax_POA_Form__c/fields/Docusign_Body_Chunk2__c.field-meta.xml
<CustomField>
    <fullName>Docusign_Body_Chunk2__c</fullName>
    <label>Docusign Body Chunk2</label>
    <type>TextArea</type>
</CustomField>