unpackaged/main/default/objects/Tax_POA_Form__c/fields/Signatory_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Signatory_Phone_Number__c</fullName>
    <label>Signatory Phone Number</label>
    <type>Phone</type>
</CustomField>