unpackaged/main/default/objects/Tax_POA_Form__c/fields/Tax_Identification_Number__c.field-meta.xml
<CustomField>
    <fullName>Tax_Identification_Number__c</fullName>
    <label>Tax Identification Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>